<resources>
    <string name="app_name">SensorStreamer</string>
    <string name="stream">Stream</string>
    <string name="manage_connections">Manage Connections</string>
    <string name="manage_packets">Manage Packets</string>
    <string name="about">About</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="add_connection">Add Connection</string>
    <string name="add_packet">Add Packet</string>
    <string name="no_packets">No packets</string>
    <string name="no_connections">No connections</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="connection_name">Connection name</string>
    <string name="connection_type">Connection type</string>
    <string name="new_connection">New Connection</string>
    <string name="edit_connection">Edit Connection</string>
    <string name="save_connection">Save Connection</string>
    <string name="choose_type">Choose type</string>
    <string name="tcp_server">TCP server</string>
    <string name="tcp_client">TCP client</string>
    <string name="json">JSON</string>
    <string name="binary">Binary</string>
    <string name="packet_name">Packet name</string>
    <string name="packet_type">Packet type</string>
    <string name="new_packet">New packet</string>
    <string name="edit_packet">Edit packet</string>
    <string name="save_packet">Save packet</string>
    <string name="packets_overview">Packets overview</string>
    <string name="connections_overview">Connections overview</string>
    <string name="streaming">Streaming</string>
    <string name="port">Port</string>
    <string name="port_outside_range">Port has to be in range 1-65535</string>
    <string name="tcp_server_on_port">"TCP server on port "</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="tcp_client_on_host">"TCP client on host: "</string>
    <string name="port_has_to_be_specified">Port has to be specified</string>
    <string name="hostname">Hostname</string>
    <string name="hostname_has_to_be_specified">Hostname has to be specified</string>
    <string name="hostname_cannot_contain_spaces">Hostname cannot contain spaces</string>
    <string name="include_following_sensors">Include following sensors:</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="ambient_temperature">Ambient temperature</string>
    <string name="gravity">Gravity</string>
    <string name="light">Light</string>
    <string name="linear_acceleration">Linear acceleration</string>
    <string name="rotation_vector">Rotation vector</string>
    <string name="relative_humidity">Relative humidity</string>
    <string name="proximity">Proximity</string>
    <string name="pressure">Pressure</string>
    <string name="magnetic_field">Magnetic field</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="empty_packet">Empty packet</string>
    <string name="binary_packet">"Binary packet: "</string>
    <string name="json_packet">JSON packet:</string>
    <string name="invalid_packet">Invalid packet</string>
    <string name="include_timestamp">Include timestamp</string>
    <string name="connection">Connection</string>
    <string name="packet">Packet</string>
    <string name="frequency_hz">Frequency (Hz)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="dismiss">Dismiss</string>
    <string name="not_supported">Not supported</string>
    <string name="binary_not_supported">Binary packets are not yet supported</string>
    <string name="no_packet_specified">No packet was specified</string>
    <string name="packet_period">Packet period</string>
    <string name="high_period_200_ms">High period (200 ms)</string>
    <string name="medium_period_60_ms">Medium period (60 ms)</string>
    <string name="low_period_10_ms">Low period (10 ms)</string>
    <string name="lowest_possible_period">Lowest possible period</string>
    <string name="invalid_connection">Invalid connection</string>
    <string name="no_connection_specified">No connection specified</string>
    <string name="communication_error">Communication error</string>
    <string name="connected_to">"Connected to "</string>
    <string name="serving_at">"Serving at "</string>
    <string name="streaming_is_active">Streaming is active</string>
</resources>
