<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/text_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/connection" />

        <TextView
            android:text="@string/packet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/packet" />

        <TextView
            android:text="@string/frequency_hz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text="10"
            android:ems="10"
            android:id="@+id/frequency" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start"
                android:layout_weight="1" />

            <Button
                android:text="@string/stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stop"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
