<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_connection"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.honzamrazek.sensorstreamer.activities.EditConnectionActivity">
    <!-- Action bar -->
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/text_margin"
        tools:context="cz.honzamrazek.sensorstreamer.activities.EditConnectionActivity">

        <TextView
            android:text="@string/connection_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/name" />

        <TextView
            android:text="@string/connection_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type" />

        <!-- Fragment -->
        <FrameLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/save_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save" />
    </LinearLayout>
</LinearLayout>